RESOLVED FIXED265758
[IFC][Cleanup] Fix typos in Line, LineBuilder and TextUtil
https://bugs.webkit.org/show_bug.cgi?id=265758
Summary [IFC][Cleanup] Fix typos in Line, LineBuilder and TextUtil
alan
Reported 2023-12-03 11:05:24 PST
ssia
Attachments
[fast-cq]Patch (5.43 KB, patch)
2023-12-03 11:06 PST, alan
no flags
alan
Comment 1 2023-12-03 11:06:43 PST
Created attachment 468843 [details] [fast-cq]Patch
EWS
Comment 2 2023-12-04 09:34:58 PST
Committed 271490@main (396b0829dcdd): <https://commits.webkit.org/271490@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468843 [details].
Radar WebKit Bug Importer
Comment 3 2023-12-04 09:36:15 PST
Note You need to log in before you can comment on or make changes to this bug.