[IFC][Cleanup] Fix typos in Line, LineBuilder and TextUtil https://bugs.webkit.org/show_bug.cgi?id=265758

Reviewed by Tim Nguyen.

* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::removeOverflowingOutOfFlowContent):
(WebCore::Layout::Line::removeOverflowingOurOfFlowContent): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::hasTrailingSoftWrapOpportunity):
(WebCore::Layout::LineBuilder::placeInlineAndFloatContent):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::computedExpansions):

Canonical link: https://commits.webkit.org/271490@main